--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,7 +2,8 @@
 import Navbar from "@/components/Navbar.astro";
 import Footer from "@/components/Footer.astro";
 import "@/styles/globals.css";
-import favicon from "@/assets/favicons/favicon-cropped.png";
+import favicon from "@/assets/logos/logo-transparent.png";
+import type { loadRenderers } from "astro:container";
 interface Props {
   title: string;
 }
@@ -19,12 +20,15 @@ const { title } = Astro.props;
     <link rel="icon" type="image/png" href={favicon.src} />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+    <style>
+      body {
+        margin-top: 100px; /* Adjust this value based on the navbar height */
+      }
+    </style>
   </head>
-  <Navbar />
   <body>
+    <Navbar client:load />
     <slot />
+    <Footer />
   </body>
-  <Footer />
-
-
 </html>
