--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,7 +27,7 @@
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
-    --radius: 0.5rem
+    --radius: 0.5rem;
   }
   .dark {
     --background: 222.2 84% 4.9%;
@@ -53,7 +53,7 @@
     --chart-2: 160 60% 45%;
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
-    --chart-5: 340 75% 55%
+    --chart-5: 340 75% 55%;
   }
 }
 @layer base {
@@ -63,28 +63,4 @@
   body {
     @apply bg-background text-foreground;
   }
-}
-
-@font-face {
-  font-family: 'OldStandardTT';
-  src: url('../assets/fonts/OldStandardTT-Regular.ttf') format('tff');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'OldStandardTT';
-  src: url('../assets/fonts/OldStandardTT-Bold.ttf') format('tff');
-  font-weight: 700;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'OldStandardTT';
-  src: url('../assets/fonts/OldStandardTT-Italic.ttf') format('tff');
-  font-weight: normal;
-  font-style: italic;
-  font-display: swap;
 }
