--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,4 +1,5 @@
 ---
+import "@/styles/globals.css";
 import logo from "@/assets/logos/logo.png";
 import Image from "astro/components/Image.astro";
 
@@ -15,11 +16,8 @@ const navItems = [
   <div
     class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
   >
-    <a
-      href="https://utsbi.org/"
-      class="flex items-center space-x-3 rtl:space-x-reverse"
-    >
-      <Image src={logo} loading={"eager"} class="h-12 w-12" alt="SBI Logo" />
+    <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
+      <Image src={logo} loading={"eager"} class="h-14 w-14" alt="SBI Logo" />
       <!-- <span class="self-center text-2xl whitespace-nowrap font-OldStandardTT"
         >Sustainble Building Initiative</span
       > -->
@@ -49,7 +47,7 @@ const navItems = [
     </button>
     <div class="items-end justify-between hidden w-full md:flex md:w-auto">
       <ul
-        class="flex flex-col p-4 md:p-0 mt-4 font-OldStandardTT border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white"
+        class="flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white"
       >
         {
           navItems.map((item) => (
@@ -57,7 +55,7 @@ const navItems = [
               <a
                 href={item.href}
                 class={`block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:p-0
-                  md:text-black text-xl`}
+                  md:text-black text-xl font-OldStandardTT`}
               >
                 {item.name}
               </a>
