--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,11 @@
 ---
+import "@/styles/globals.css";
 import Navbar from "@/components/Navbar.astro";
 import Footer from "@/components/Footer.astro";
-import "@/styles/globals.css";
 import favicon from "@/assets/logos/logo-transparent.png";
-import type { loadRenderers } from "astro:container";
+
+import { ClientRouter } from "astro:transitions";
+
 interface Props {
   title: string;
 }
@@ -15,19 +17,18 @@ const { title } = Astro.props;
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Astro description" />
+    <meta
+      name="description"
+      content="Offical UTSBI website: Research-Driven, Professionally Inspired, and Student-Powered."
+    />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/png" href={favicon.src} />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
-    <style>
-      body {
-        margin-top: 100px; /* Adjust this value based on the navbar height */
-      }
-    </style>
+    <ClientRouter />
   </head>
-  <body>
-    <Navbar client:load />
+  <body class="scrollbar">
+    <Navbar />
     <slot />
     <Footer />
   </body>
