--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,8 +7,10 @@ import background from "@/assets/images/background.png";
 
 <Layout title="Home">
   <section>
-    <div class="background-container">
-      <div class="overlay-text text-left">
+    <div class="relative inline-block">
+      <div
+        class="overlay-text absolute text-white text-left font-OldStandardTT -translate-x-1/2 -translate-y-1/2 animate-title"
+      >
         <div class="text-7xl">
           <span class="text-green-500">S</span>ustainable
         </div>
@@ -18,28 +20,39 @@ import background from "@/assets/images/background.png";
         <div class="text-7xl">
           <span class="text-green-500">I</span>nitiative
         </div>
-        <div class="">
+        <div class="pl-1 text-lg">
           Research-Driven, Professionally Inspired, and Student-Powered
         </div>
-        <!-- <div>
-          <button
-            class="text-green-500 text-2xl border-spacing-4 border-2 rounded-lg"
-            >Join Us</button
+        <div class="pl-1 pt-6">
+          <a
+            href="https://docs.google.com/forms/d/e/1FAIpQLSfydaV7PUR4yvqQoVT73bbDsSJ1vzKCVlslrE6UGVi3yEKIVA/viewform"
           >
-          <button>What We're About</button>
-        </div> -->
+            <button
+              class="bg-green-500 hover:bg-transparent text-white-700 hover:text-white pt-2 pb-1 px-4 border border-green-500 hover:border-green-500 rounded"
+            >
+              Join Us
+            </button>
+          </a>
+          <a href="/about">
+            <button
+              class="bg-transparent hover:bg-green-500 text-white-700 hover:text-white pt-2 pb-1 px-4 border border-green-500 hover:border-transparent rounded"
+            >
+              What We're About
+            </button>
+          </a>
+        </div>
       </div>
       <Image
         src={background}
         loading={"eager"}
         alt="Background"
-        class="background-image"
+        class="block object-cover h-screen"
       />
     </div>
   </section>
-  <section class="px-72 py-3">
+  <section class="px-80 py-5">
     <div class="font-OldStandardTT">
-      <div class="text-3xl">Our Mission Statement</div>
+      <div class="text-2xl">Our Mission Statement</div>
       <div class="pt-2">
         “We aim to spread the idea of sustainable infrastructure and team
         collaboration into the upcoming generations to all types of schools — no
@@ -48,31 +61,54 @@ import background from "@/assets/images/background.png";
         have to solve everyday problems in a sustainable way.”
       </div>
     </div>
+    <hr class="h-px my-8 bg-gray-200 border-0" />
   </section>
 </Layout>
 
 <style>
-  @import url("https://fonts.googleapis.com/css2?family=Old+Standard+TT:wght@400&display=swap");
-
-  .background-container {
-    position: relative;
-    display: inline-block;
-  }
-
   .overlay-text {
-    position: absolute;
+    /* position: absolute; */
     top: 50%;
     left: 40%;
-    transform: translate(-50%, -50%);
-    color: white;
+    /* transform: translate(-50%, -50%); */
+    /* color: white;
     font-family: "Old Standard TT", serif;
-    z-index: 1;
-    text-align: left;
+    text-align: left; */
   }
 
-  .background-image {
-    display: block;
-    height: 80vh;
-    object-fit: cover;
+  .animate-title > div {
+    opacity: 0;
+    animation: fadeInUp 2s ease forwards;
+  }
+
+  .animate-title > div:nth-child(1) {
+    animation-delay: 0.1s;
+  }
+
+  .animate-title > div:nth-child(2) {
+    animation-delay: 0.3s;
+  }
+
+  .animate-title > div:nth-child(3) {
+    animation-delay: 0.5s;
+  }
+
+  .animate-title > div:nth-child(4) {
+    animation-delay: 0.7s;
+  }
+
+  .animate-title > div:nth-child(5) {
+    animation-delay: 0.9s;
+  }
+
+  @keyframes fadeInUp {
+    0% {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
   }
 </style>
