--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,9 +3,11 @@ import "@/styles/globals.css";
 import Image from "astro/components/Image.astro";
 import Layout from "../layouts/Layout.astro";
 import background from "@/assets/images/background.png";
+import group from "@/assets/images/group.jpg";
 ---
 
 <Layout title="Home">
+  <!-- Front page -->
   <section>
     <div class="relative inline-block">
       <div
@@ -28,14 +30,14 @@ import background from "@/assets/images/background.png";
             href="https://docs.google.com/forms/d/e/1FAIpQLSfydaV7PUR4yvqQoVT73bbDsSJ1vzKCVlslrE6UGVi3yEKIVA/viewform"
           >
             <button
-              class="bg-green-500 hover:bg-transparent text-white-700 hover:text-white pt-2 pb-1 px-4 border border-green-500 hover:border-green-500 rounded"
+              class="bg-green-500 hover:bg-transparent text-white-700 hover:text-white transition duration-300 pt-3 pb-2 px-6 border border-green-500 hover:border-green-500 rounded"
             >
               Join Us
             </button>
           </a>
           <a href="/about">
             <button
-              class="bg-transparent hover:bg-green-500 text-white-700 hover:text-white pt-2 pb-1 px-4 border border-green-500 hover:border-transparent rounded"
+              class="bg-transparent hover:bg-green-500 text-white-700 hover:text-white transition duration-300 pt-3 pb-2 px-6 border border-green-500 hover:border-transparent rounded"
             >
               What We're About
             </button>
@@ -50,10 +52,11 @@ import background from "@/assets/images/background.png";
       />
     </div>
   </section>
-  <section class="px-80 py-5">
+  <!-- Mission Statement -->
+  <section class="px-96 pt-10">
     <div class="font-OldStandardTT">
-      <div class="text-2xl">Our Mission Statement</div>
-      <div class="pt-2">
+      <div class="text-3xl">Our Mission Statement</div>
+      <div class="pt-2 italic">
         “We aim to spread the idea of sustainable infrastructure and team
         collaboration into the upcoming generations to all types of schools — no
         matter their financial status. We host workshops and events to get
@@ -63,17 +66,44 @@ import background from "@/assets/images/background.png";
     </div>
     <hr class="h-px my-8 bg-gray-200 border-0" />
   </section>
+  <!-- Call to action -->
+  <section class="px-96 py-5 relative">
+    <div class="flex justify-center items-center">
+      <div
+        class="absolute inset-0 flex flex-col justify-center items-center text-white font-OldStandardTT z-10"
+      >
+        <div class="text-4xl pb-3">Join Our Team</div>
+        <div class="text-xl text-center px-4">
+          Your Journey to Sustainable Impact Begins Here - <span class="italic"
+            >Learn, Build, Lead</span
+          >.
+        </div>
+        <div class="pt-8">
+          <a
+            href="https://docs.google.com/forms/d/e/1FAIpQLSfydaV7PUR4yvqQoVT73bbDsSJ1vzKCVlslrE6UGVi3yEKIVA/viewform"
+          >
+            <button
+              class="bg-green-500 hover:bg-transparent text-white-700 hover:text-white transition duration-300 text-xl pt-4 pb-3 px-6 border border-green-500 hover:border-green-500 rounded"
+            >
+              Apply Now
+            </button>
+          </a>
+        </div>
+      </div>
+      <Image
+        src={group}
+        loading={"lazy"}
+        alt="Professional group"
+        class="rounded-xl object-cover brightness-50"
+      />
+    </div>
+  </section>
 </Layout>
 
 <style>
   .overlay-text {
-    /* position: absolute; */
     top: 50%;
     left: 40%;
-    /* transform: translate(-50%, -50%); */
-    /* color: white;
-    font-family: "Old Standard TT", serif;
-    text-align: left; */
   }
 
   .animate-title > div {
