finish index page + finish footer

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -17,7 +17,12 @@ const navItems = [
     class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-3"
   >
     <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
-      <Image src={logo} loading={"eager"} class="h-16 w-16" alt="SBI Logo" />
+      <Image
+        src={logo}
+        loading={"eager"}
+        class="h-14 w-14 md:h-16 md:w-16"
+        alt="SBI Logo"
+      />
     </a>
     <button
       data-collapse-toggle="navbar-sticky"
@@ -51,7 +56,7 @@ const navItems = [
             <li>
               <a
                 href={item.href}
-                class={`block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:p-0
+                class={`block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent hover:underline md:p-0
                   md:text-black text-xl font-OldStandardTT`}
               >
                 {item.name}
