remove Icon component, test navbar, minor changes

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,13 +9,13 @@ const currentYear = new Date().getFullYear();
     <div class="flex flex-col md:flex-row justify-between items-center">
       <div class="text-center md:text-left mb-4 md:mb-0">
         <p class="text-sm text-gray-600">
-          Research-Driven, Professionally Inspired, and Student-Powered
+          Research Driven, Professionally Inspired, and Student Powered
         </p>
         <p class="text-sm text-gray-600">
-          &copy; {currentYear} Sustainable Building Initiative. All rights reserved.
+          &copy; {currentYear} Sustainable Building Initiative
         </p>
       </div>
-      <div class="flex space-x-4">
+      <div class="pl-3 flex space-x-4">
         <a
           href="https://instagram.com/sbi_ut"
           aria-label="Instagram"
