--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ const google_forms =
           <span class="text-green-500">I</span>nitiative
         </div>
         <div class="pl-1 text-base sm:text-lg">
-          Research-Driven, Professionally Inspired, and Student-Powered
+          Research Driven, Professionally Inspired, and Student Powered
         </div>
         <div class="pl-1 pt-6 flex flex-col sm:flex-row sm:space-x-4">
           <a href={google_forms} class="mb-3 sm:mb-0">
@@ -133,7 +133,7 @@ const google_forms =
   <section class="px-6 py-10 md:px-32 2xl:px-80 relative">
     <div class="flex justify-center items-center">
       <div
-        class="absolute inset-0 flex flex-col justify-center items-center text-white font-OldStandardTT z-10 text-center"
+        class="absolute inset-0 flex flex-col justify-center items-center text-white font-OldStandardTT z-10 text-center p-5 md:p-32"
       >
         <div class="text-2xl sm:text-4xl py-3">Join Our Team</div>
         <div class="text-base sm:text-xl text-center px-4">
