add about section in progress

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,13 +5,13 @@ const currentYear = new Date().getFullYear();
 <footer
   class="px-6 py-6 md:px-32 2xl:px-80 relative border-t border-gray-200 font-OldStandardTT"
 >
-  <div class="container mx-auto px-4">
+  <div class="container mx-auto">
     <div class="flex flex-col md:flex-row justify-between items-center">
       <div class="text-center md:text-left mb-4 md:mb-0">
-        <p class="text-sm text-gray-600">
+        <p class="text-sm text-gray-800">
           Research Driven, Professionally Inspired, and Student Powered
         </p>
-        <p class="text-sm text-gray-600">
+        <p class="text-sm text-gray-800">
           &copy; {currentYear} Sustainable Building Initiative
         </p>
       </div>
@@ -19,14 +19,14 @@ const currentYear = new Date().getFullYear();
         <a
           href="https://instagram.com/sbi_ut"
           aria-label="Instagram"
-          class="text-gray-600 hover:underline"
+          class="text-gray-800 hover:underline"
         >
           Instagram
         </a>
         <a
           href="https://www.linkedin.com/company/sustainable-business-initiative/"
           aria-label="LinkedIn"
-          class="text-gray-600 hover:underline"
+          class="text-gray-800 hover:underline"
         >
           LinkedIn
         </a>
