--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,5 +1,4 @@
 ---
-import "@/styles/globals.css";
 import logo from "@/assets/logos/logo.png";
 import Image from "astro/components/Image.astro";
 
@@ -14,7 +13,8 @@ const navItems = [
 
 <nav
   x-data="{ open: false }"
-  class="bg-white fixed w-full z-20 top-0 start-0 border-b border-gray-200"
+  class="bg-white fixed w-full z-50 top-0 start-0 border-b border-gray-200"
+  @click.outside="open = false"
 >
   <div
     class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-3"
@@ -31,7 +31,7 @@ const navItems = [
     <button
       @click="open = !open"
       type="button"
-      class="inline-flex items-center p-4 w-12 h-12 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"
+      class="inline-flex items-center p-4 w-12 h-12 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-1 focus:ring-gray-100"
       aria-controls="navbar-sticky"
       aria-expanded="false"
     >
@@ -39,7 +39,6 @@ const navItems = [
 
       <!-- Hamburger Icon -->
       <svg
-        x-show="!open"
         class="w-5 h-5 transition-all duration-300"
         aria-hidden="true"
         xmlns="http://www.w3.org/2000/svg"
@@ -55,7 +54,7 @@ const navItems = [
       </svg>
 
       <!-- X Icon -->
-      <svg
+      <!-- <svg
         x-show="open"
         x-transition
         class="w-10 h-10 transition-all duration-300"
@@ -69,37 +68,40 @@ const navItems = [
           stroke-linejoin="round"
           stroke-width="2"
           d="M6 18L18 6M6 6l12 12"></path>
-      </svg>
+      </svg> -->
     </button>
 
-    <!-- Mobile Slide-out Menu -->
+    <!-- Mobile Menu -->
+    <!-- TODO: make menu transition slide out from under the navbar, not over. RN creates weird effect -->
     <div
       x-show="open"
-      x-transition:enter="transition ease-out duration-300 transform"
-      x-transition:enter-start="-translate-y-full"
-      x-transition:enter-end="translate-x-0"
-      x-transition:leave="transition ease-in duration-300 transform"
-      x-transition:leave-start="translate-x-0"
-      x-transition:leave-end="-translate-y-full"
-      class="w-full md:hidden fixed top-0 left-0 pt-10 bg-gray-50 z-30"
+      x-transition:enter="transition ease-out duration-300"
+      x-transition:enter-start="opacity-0 translate-y-[-100%]"
+      x-transition:enter-end="opacity-100 translate-y-0"
+      x-transition:leave="transition ease-in duration-200"
+      x-transition:leave-start="opacity-100 translate-y-0"
+      x-transition:leave-end="opacity-0 translate-y-[-100%]"
+      class="absolute top-full left-0 w-full md:hidden"
     >
-      <ul
-        class="flex flex-col p-4 mt-4 border border-gray-100 rounded-lg bg-gray-50 space-y-2"
-      >
-        {
-          navItems.map((item) => (
-            <li>
-              <a
-                href={item.href}
-                class={`block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 
-                  text-xl font-OldStandardTT`}
-              >
-                {item.name}
-              </a>
-            </li>
-          ))
-        }
-      </ul>
+      <div class="flex justify-center bg-white p-3">
+        <div class="p-4 w-[100%] border-gray-100 bg-gray-50 rounded-lg">
+          <ul class="flex flex-col space-y-2">
+            {
+              navItems.map((item) => (
+                <li>
+                  <a
+                    href={item.href}
+                    class={`block py-2 px-3 text-gray-900 rounded hover:bg-gray-100
+                    text-xl font-OldStandardTT`}
+                  >
+                    {item.name}
+                  </a>
+                </li>
+              ))
+            }
+          </ul>
+        </div>
+      </div>
     </div>
 
     <!-- Desktop Menu -->
