--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,6 @@ import Footer from "@/components/Footer.astro";
 import favicon from "@/assets/logos/logo-transparent.png";
 
 import { ClientRouter } from "astro:transitions";
-import NavbarTest from "@/components/NavbarTest.astro";
 
 interface Props {
   title: string;
@@ -20,7 +19,7 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Offical UTSBI website: Research-Driven, Professionally Inspired, and Student-Powered."
+      content="Offical UTSBI website: Research Driven, Professionally Inspired, and Student Powered."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/png" href={favicon.src} />
@@ -29,8 +28,7 @@ const { title } = Astro.props;
     <ClientRouter />
   </head>
   <body class="scrollbar">
-    <!-- <Navbar /> -->
-    <NavbarTest />
+    <Navbar />
     <slot />
     <Footer />
   </body>
