add profile cards to about section, fix some styling

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -24,7 +24,7 @@ const currentYear = new Date().getFullYear();
           Instagram
         </a>
         <a
-          href="https://www.linkedin.com/company/sustainable-business-initiative/"
+          href="https://www.linkedin.com/company/utsbi/"
           aria-label="LinkedIn"
           class="text-gray-800 hover:underline"
         >
