--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,12 +7,42 @@ import Rice from "@/assets/images/schools/rice_university.png";
 import UTAustin from "@/assets/images/schools/TEXAS_official_seal.svg";
 import ICOL from "@/assets/images/schools/imperial_college_of_london.png";
 
-import banana from "@/assets/images/banana.webp";
-
 const images = [
   { img: Rice, href: "https://www.rice.edu/" },
   { img: UTAustin, href: "https://utexas.edu" },
   { img: ICOL, href: "https://www.imperial.ac.uk/" },
+];
+
+const people = [
+  { name: "Pedro Guzman", role: "President", email: "px.guzman@utexas.edu" },
+  { name: "Sam Moran", role: "Vice President", email: "sammoran@utexas.edu" },
+  {
+    name: "Brendan Lyon",
+    role: "Public Relations Director",
+    email: "brendanlyon@utexas.edu",
+  },
+  { name: "Enoch Zhu", role: "Tech Director", email: "enochzhu@utexas.edu" },
+  {
+    name: "Daniel Lam",
+    role: "Tech Co-Director",
+    email: "daniel.w.lam@utexas.edu",
+  },
+  {
+    name: "Dev Shroff",
+    role: "Operations Director",
+    email: "dev.shroff@utexas.edu",
+  },
+  { name: "Ali Akbar", role: "Finance Director", email: "aliakbar@utexas.edu" },
+  {
+    name: "Kabir Muzamdar",
+    role: "Civil Engineering Director",
+    email: "kabmuzum@utexas.edu",
+  },
+  {
+    name: "H.N.",
+    role: "Electrical Engineering Director",
+    email: "hnguyen78544@utexas.edu",
+  },
 ];
 ---
 
@@ -57,11 +87,16 @@ const images = [
     </div>
   </section>
   <section class="px-6 py-10 md:px-48 2xl:px-80 relative">
-    <div class="flex flex-col md:flex-row justify-between">
+    <div class="flex flex-row justify-center items-center">
       {
         images.map((item) => (
-          <a href={item.href}>
-            <Image src={item.img} alt={item.href} class="w-80" />
+          <a href={item.href} target="_blank">
+            <Image
+              src={item.img}
+              alt={item.href}
+              class="w-96 lg:w-80 pt-4 md:pt-0"
+              loading={"eager"}
+            />
           </a>
         ))
       }
@@ -69,64 +104,17 @@ const images = [
   </section>
   <section class="px-6 py-10 md:px-32 2xl:px-80 relative font-OldStandardTT">
     <div class="text-4xl">Meet Our Team</div>
-    <div class="flex flex-col">
-      <div class="flex flex-row justify-between">
-        <ProfileCard
-          image={banana}
-          name="Banana"
-          email="banana@banana.com"
-          role="Banana"
-        />
-        <ProfileCard
-          image={banana}
-          name="Banana"
-          email="banana@banana.com"
-          role="Banana"
-        />
-        <ProfileCard
-          image={banana}
-          name="Banana"
-          email="banana@banana.com"
-          role="Banana"
-        />
-        <ProfileCard
-          image={banana}
-          name="Banana"
-          email="banana@banana.com"
-          role="Banana"
-        />
-      </div>
-      <div>
-        <ProfileCard
-          image={banana}
-          name="Banana"
-          email="banana@banana.com"
-          role="Banana"
-        />
-      </div>
-      <div>
-        <ProfileCard
-          image={banana}
-          name="Banana"
-          email="banana@banana.com"
-          role="Banana"
-        />
-      </div>
-      <div>
-        <ProfileCard
-          image={banana}
-          name="Banana"
-          email="banana@banana.com"
-          role="Banana"
-        />
-      </div>
-      <div>
-        <ProfileCard
-          image={banana}
-          name="Banana"
-          email="banana@banana.com"
-          role="Banana"
-        />
+    <div class="flex justify-center">
+      <div
+        class="pt-10 flex flex-wrap justify-center -mx-4 space-y-8 md:space-y-0 w-3/4"
+      >
+        {
+          people.map((item) => (
+            <div class="w-full md:w-1/3 px-4">
+              <ProfileCard {...item} />
+            </div>
+          ))
+        }
       </div>
     </div>
   </section>
