change model location to public folder

--- a/src/pages/outreach.astro
+++ b/src/pages/outreach.astro
@@ -3,7 +3,14 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Outreach">
-  <body>
-    <h1>Outreach Section</h1>
-  </body>
+  <section
+    class="px-6 py-10 pt-36 md:px-32 2xl:px-80 relative font-OldStandardTT"
+  >
+    <div class="text-4xl">Outreach</div>
+    <div class="text-xl pt-10">
+      Explore our growing network of high schools and colleges, showcasing our
+      current connections and future outreach goals to expand sustainable
+      impact.
+    </div>
+  </section>
 </Layout>
