--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -9,7 +9,7 @@ import Layout from "../layouts/Layout.astro";
     <div class="text-4xl">Projects</div>
     <div class="w-full">
       <model-viewer
-        src="/src/assets/models/SHED-REV-AA.glb"
+        src="/models/SHED-REV-AA.glb"
         ar
         ar-modes="webxr scene-viewer quick-look"
         camera-controls
