--- a/src/pages/outreach.astro
+++ b/src/pages/outreach.astro
@@ -13,4 +13,9 @@ import Layout from "../layouts/Layout.astro";
       impact.
     </div>
   </section>
+  <section
+    class="px-6 py-10 pt-36 md:px-32 2xl:px-80 relative font-OldStandardTT"
+  >
+    <div id="map" class="map" style="height: 500px;"></div>
+  </section>
 </Layout>
