--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -3,10 +3,10 @@
 @import "@radix-ui/colors/violet.css";
 
 /* reset */
-button,
+/* button,
 h3 {
   all: unset;
-}
+} */
 
 .AccordionRoot {
   border-radius: 6px;
@@ -45,12 +45,12 @@ h3 {
   font-family: inherit;
   background-color: transparent;
   padding: 0 20px;
-  height: 45px;
+  height: 50px;
   flex: 1;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  font-size: 15px;
+  /* font-size: 15px; */
   line-height: 1;
   /* color: var(--violet-11); */
   box-shadow: 0 1px 0 var(--mauve-6);
@@ -79,7 +79,7 @@ h3 {
 }
 
 .AccordionChevron {
-  color: var(--violet-10);
+  /* color: var(--violet-10); */
   transition: transform 300ms cubic-bezier(0.87, 0, 0.13, 1);
 }
 .AccordionTrigger[data-state="open"] > .AccordionChevron {
