--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import AccordionCustom from "@/components/AccordionCustom";
+import AccordionProjects from "@/components/AccordionProjects";
 ---
 
 <Layout title="Projects">
@@ -10,139 +10,7 @@ import AccordionCustom from "@/components/AccordionCustom";
     <div class="text-4xl">Projects</div>
     <div class="text-3xl py-6">Infrastructure Projects</div>
     <div>
-      <AccordionCustom client:load />
+      <AccordionProjects client:load />
     </div>
-    <!-- <div>
-      <div
-        id="accordion-color"
-        data-accordion="collapse"
-        data-active-classes="bg-blue-100 dark:bg-gray-800 text-blue-600 dark:text-white"
-      >
-        <h2 id="accordion-color-heading-1">
-          <button
-            type="button"
-            class="flex items-center justify-between w-full p-5 font-medium rtl:text-right text-gray-500 border border-b-0 border-gray-200 rounded-t-xl focus:ring-4 focus:ring-blue-200 dark:focus:ring-blue-800 dark:border-gray-700 dark:text-gray-400 hover:bg-blue-100 dark:hover:bg-gray-800 gap-3"
-            data-accordion-target="#accordion-color-body-1"
-            aria-expanded="true"
-            aria-controls="accordion-color-body-1"
-          >
-            <span>Hobbie Farm Project</span>
-            <svg
-              data-accordion-icon
-              class="w-3 h-3 rotate-180 shrink-0"
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 10 6"
-            >
-              <path
-                stroke="currentColor"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M9 5 5 1 1 5"></path>
-            </svg>
-          </button>
-        </h2>
-        <div
-          id="accordion-color-body-1"
-          class="hidden"
-          aria-labelledby="accordion-color-heading-1"
-        >
-          <div
-            class="p-5 border border-b-0 border-gray-200 dark:border-gray-700 dark:bg-gray-900"
-          >
-            <p class="mb-2 text-gray-500 dark:text-gray-400">
-              Flowbite is an open-source library of interactive components built
-              on top of Tailwind CSS including buttons, dropdowns, modals,
-              navbars, and more.
-            </p>
-            <p class="text-gray-500 dark:text-gray-400">
-              Check out this guide to learn how to <a
-                href="/docs/getting-started/introduction/"
-                class="text-blue-600 dark:text-blue-500 hover:underline"
-                >get started</a
-              > and start developing websites even faster with components on top
-              of Tailwind CSS.
-            </p>
-          </div>
-        </div>
-        <h2 id="accordion-color-heading-2">
-          <button
-            type="button"
-            class="flex items-center justify-between w-full p-5 font-medium rtl:text-right text-gray-500 border border-gray-200 rounded-b-xl focus:ring-4 focus:ring-blue-200 dark:focus:ring-blue-800 dark:border-gray-700 dark:text-gray-400 hover:bg-blue-100 dark:hover:bg-gray-800 gap-3"
-            data-accordion-target="#accordion-color-body-2"
-            aria-expanded="false"
-            aria-controls="accordion-color-body-2"
-          >
-            <span class="italic"
-              >Upcoming - Sustainable Family Home Project</span
-            >
-            <svg
-              data-accordion-icon
-              class="w-3 h-3 rotate-180 shrink-0"
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 10 6"
-            >
-              <path
-                stroke="currentColor"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M9 5 5 1 1 5"></path>
-            </svg>
-          </button>
-        </h2>
-        <div
-          id="accordion-color-body-2"
-          class="hidden"
-          aria-labelledby="accordion-color-heading-2"
-        >
-          <div
-            class="p-5 border border-t-0 border-gray-200 dark:border-gray-700"
-          >
-            <p class="mb-2 text-gray-500 dark:text-gray-400">
-              The main difference is that the core components from Flowbite are
-              open source under the MIT license, whereas Tailwind UI is a paid
-              product. Another difference is that Flowbite relies on smaller and
-              standalone components, whereas Tailwind UI offers sections of
-              pages.
-            </p>
-            <p class="mb-2 text-gray-500 dark:text-gray-400">
-              However, we actually recommend using both Flowbite, Flowbite Pro,
-              and even Tailwind UI as there is no technical reason stopping you
-              from using the best of two worlds.
-            </p>
-            <p class="mb-2 text-gray-500 dark:text-gray-400">
-              Learn more about these technologies:
-            </p>
-            <ul class="ps-5 text-gray-500 list-disc dark:text-gray-400">
-              <li>
-                <a
-                  href="https://flowbite.com/pro/"
-                  class="text-blue-600 dark:text-blue-500 hover:underline"
-                  >Flowbite Pro</a
-                >
-              </li>
-              <li>
-                <a
-                  href="https://tailwindui.com/"
-                  rel="nofollow"
-                  class="text-blue-600 dark:text-blue-500 hover:underline"
-                  >Tailwind UI</a
-                >
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div> -->
   </section>
-
-  <script
-    type="module"
-    src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"
-  ></script>
 </Layout>
