fix 3d model not rendering, add skybox

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -10,7 +10,7 @@ import AccordionProjects from "@/components/AccordionProjects";
     <div class="text-4xl">Projects</div>
     <div class="text-3xl py-6">Infrastructure Projects</div>
     <div>
-      <AccordionProjects client:load />
+      <AccordionProjects client:only />
     </div>
   </section>
 </Layout>
