optimize 3d model test

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -29,7 +29,7 @@ const people = [
   },
   {
     name: "Dev Shroff",
-    role: "Operations Director",
+    role: "R&D Director",
     email: "dev.shroff@utexas.edu",
   },
   { name: "Ali Akbar", role: "Finance Director", email: "aliakbar@utexas.edu" },
