--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -18,7 +18,7 @@ const people = [
   { name: "Sam Moran", role: "Vice President", email: "sammoran@utexas.edu" },
   {
     name: "Brendan Lyon",
-    role: "Public Relations Director",
+    role: "Operations Director",
     email: "brendanlyon@utexas.edu",
   },
   { name: "Enoch Zhu", role: "Tech Director", email: "enochzhu@utexas.edu" },
@@ -39,9 +39,9 @@ const people = [
     email: "kabmuzum@utexas.edu",
   },
   {
-    name: "H.N.",
-    role: "Electrical Engineering Director",
-    email: "hnguyen78544@utexas.edu",
+    name: "Noah Dao",
+    role: "Public Relations Director",
+    email: "ntd534@my.utexas.edu",
   },
 ];
 ---
