--- a/src/pages/outreach.astro
+++ b/src/pages/outreach.astro
@@ -14,12 +14,12 @@ import Layout from "../layouts/Layout.astro";
     </div>
   </section>
   <section class="px-6 pb-10 md:px-32 2xl:px-80 relative font-OldStandardTT">
-    <!-- <div id="map" class="map" style="height: 500px;"></div> -->
-    <div class="h-full w-auto">
+    <div class="relative" style="padding-top: 56.25%;">
+      <!-- 16:9 Aspect Ratio -->
       <iframe
         src="https://www.google.com/maps/d/embed?mid=1ItBSYv-_H_PJBScpnU8gLMzr9F4qA6Q&ehbc=2E312F"
-        width="640"
-        height="480"></iframe>
+        class="absolute top-0 left-0 w-full h-full"
+        allowfullscreen></iframe>
     </div>
   </section>
 </Layout>
