update google forms link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,8 +4,7 @@ import Layout from "../layouts/Layout.astro";
 import background from "@/assets/images/background.png";
 import group from "@/assets/images/group.jpg";
 
-const google_forms =
-  "https://docs.google.com/forms/d/e/1FAIpQLSfydaV7PUR4yvqQoVT73bbDsSJ1vzKCVlslrE6UGVi3yEKIVA/viewform";
+const google_forms = "https://forms.gle/KWJjaXGYt2dv3bY68";
 ---
 
 <Layout title="Home">
