--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,7 +3,16 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Contact">
-  <body>
-    <h1>Contact Section</h1>
-  </body>
+  <section
+    class="px-6 py-10 pt-36 md:px-32 2xl:px-80 relative font-OldStandardTT"
+  >
+    <div class="text-4xl">Contact Us</div>
+    <div class="text-xl pt-10 space-y-6">
+      <div>
+        If you have any questions or inquiries, please email
+        <a href="mailto:px.guzman@utexas.edu" class="font-bold">Pedro Guzman</a>
+        or <a href="mailto:sammoran@utexas.edu" class="font-bold">Sam Moran</a>
+      </div>
+    </div>
+  </section>
 </Layout>
