--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -11,7 +11,7 @@ import Layout from "../layouts/Layout.astro";
       <div>
         If you have any questions or inquiries, please email
         <a href="mailto:px.guzman@utexas.edu" class="font-bold">Pedro Guzman</a>
-        or <a href="mailto:sammoran@utexas.edu" class="font-bold">Sam Moran</a>
+        or <a href="mailto:sammoran@utexas.edu" class="font-bold">Sam Moran</a>.
       </div>
     </div>
   </section>
